--- a/dockerfiles/ci/buster/docker-compose.yml
+++ b/dockerfiles/ci/buster/docker-compose.yml
@@ -11,6 +11,17 @@ services:
           - linux/arm64
           - linux/amd64
 
+  php-8.3:
+    image: datadog/dd-trace-ci:php-8.3_buster
+    build:
+      context: .
+      dockerfile: php-8.3/Dockerfile
+      x-bake: *bake
+      args:
+        phpVersion: "8.3"
+        phpTarGzUrl: https://downloads.php.net/~jakub/php-8.3.0RC3.tar.gz
+        phpSha256Hash: "5885965b3e315d62fdc151735fe579b1e2301a4ccf56b3fa18f96c34a3b898c8"
+
   php-8.2:
     image: datadog/dd-trace-ci:php-8.2_buster
     build:
