--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2244,6 +2244,17 @@ workflows:
           abi_no: "20220829"
           triplet: "aarch64-alpine-linux-musl"
           resource_class: "arm.xlarge"
+      - "cargo build --release":
+          name: "Profiler PHP v8.3 - x86_64-alpine-linux-musl"
+          docker_image: "datadog/dd-trace-ci:php-compile-extension-alpine-8.3"
+          abi_no: "20230831"
+          triplet: "x86_64-alpine-linux-musl"
+      - "cargo build --release":
+          name: "Profiler PHP v8.3 - aarch64-alpine-linux-musl"
+          docker_image: "datadog/dd-trace-ci:php-compile-extension-alpine-8.3"
+          abi_no: "20230831"
+          triplet: "aarch64-alpine-linux-musl"
+          resource_class: "arm.medium"
 
       # These don't actually need the other job to complete, but this way
       # there are fewer resources used when the build step fails.
@@ -2426,6 +2437,17 @@ workflows:
           abi_no: "20220829"
           triplet: "aarch64-unknown-linux-gnu"
           resource_class: "arm.xlarge"
+      - "cargo build --release":
+          name: "Profiler PHP v8.3 - x86_64-unknown-linux-gnu"
+          docker_image: "datadog/dd-trace-ci:php-8.3_centos-7"
+          abi_no: "20230831"
+          triplet: "x86_64-unknown-linux-gnu"
+      - "cargo build --release":
+          name: "Profiler PHP v8.3 - aarch64-unknown-linux-gnu"
+          docker_image: "datadog/dd-trace-ci:php-8.3_centos-7"
+          abi_no: "20230831"
+          triplet: "aarch64-unknown-linux-gnu"
+          resource_class: "arm.medium"
 
       # These don't actually need the other job to complete, but this way
       # there are fewer resources used when the build step fails.
@@ -2535,6 +2557,7 @@ workflows:
                 - '8.0'
                 - '8.1'
                 - '8.2'
+                - '8.3'
               resource_class:
                 - "medium"
                 - "arm.medium"
@@ -2644,6 +2667,19 @@ workflows:
           php_version: "8.2"
           so_suffix: "20220829"
           resource_class: "arm.medium"
+      - compile_extension_centos:
+          requires: [ 'Prepare Code' ]
+          name: "Compile x86_64 PHP 83 nts + zts + debug"
+          docker_image: "datadog/dd-trace-ci:php-8.3_centos-7"
+          php_version: "8.3"
+          so_suffix: "20230831"
+      - compile_extension_centos:
+          requires: [ 'Prepare Code' ]
+          name: "Compile aarch64 PHP 83 nts + zts + debug"
+          docker_image: "datadog/dd-trace-ci:php-8.3_centos-7"
+          php_version: "8.3"
+          so_suffix: "20230831"
+          resource_class: "arm.medium"
       # SIGNALFX: disable PECL
       # - pecl_build:
       #     requires: [ 'Prepare Code' ]
@@ -2668,6 +2704,8 @@ workflows:
             - "Compile aarch64 PHP 81 nts + zts + debug"
             - "Compile x86_64 PHP 82 nts + zts + debug"
             - "Compile aarch64 PHP 82 nts + zts + debug"
+            - "Compile x86_64 PHP 83 nts + zts + debug"
+            - "Compile aarch64 PHP 83 nts + zts + debug"
             # SIGNALFX: disable PECL
             # - "Build PECL"
 
@@ -2678,6 +2716,7 @@ workflows:
             - "Profiler PHP v8.0 - x86_64-alpine-linux-musl"
             - "Profiler PHP v8.1 - x86_64-alpine-linux-musl"
             - "Profiler PHP v8.2 - x86_64-alpine-linux-musl"
+            - "Profiler PHP v8.3 - x86_64-alpine-linux-musl"
 
             - "Profiler PHP v7.1 - x86_64-unknown-linux-gnu"
             - "Profiler PHP v7.2 - x86_64-unknown-linux-gnu"
@@ -2686,6 +2725,7 @@ workflows:
             - "Profiler PHP v8.0 - x86_64-unknown-linux-gnu"
             - "Profiler PHP v8.1 - x86_64-unknown-linux-gnu"
             - "Profiler PHP v8.2 - x86_64-unknown-linux-gnu"
+            - "Profiler PHP v8.3 - x86_64-unknown-linux-gnu"
 
             - "Profiler PHP v7.1 - aarch64-alpine-linux-musl"
             - "Profiler PHP v7.2 - aarch64-alpine-linux-musl"
@@ -2694,6 +2734,7 @@ workflows:
             - "Profiler PHP v8.0 - aarch64-alpine-linux-musl"
             - "Profiler PHP v8.1 - aarch64-alpine-linux-musl"
             - "Profiler PHP v8.2 - aarch64-alpine-linux-musl"
+            - "Profiler PHP v8.3 - aarch64-alpine-linux-musl"
 
             - "Profiler PHP v7.1 - aarch64-unknown-linux-gnu"
             - "Profiler PHP v7.2 - aarch64-unknown-linux-gnu"
@@ -2702,6 +2743,7 @@ workflows:
             - "Profiler PHP v8.0 - aarch64-unknown-linux-gnu"
             - "Profiler PHP v8.1 - aarch64-unknown-linux-gnu"
             - "Profiler PHP v8.2 - aarch64-unknown-linux-gnu"
+            - "Profiler PHP v8.3 - aarch64-unknown-linux-gnu"
 
       # SIGNALFX: run job to repackage DD extension archives to SignalFX ones
       - "package SFX extension":
@@ -2751,6 +2793,17 @@ workflows:
           docker_image: "datadog/dd-trace-ci:php-8.2_buster"
           so_suffix: "20220829"
           resource_class: "arm.medium"
+      - compile_extension_asan:
+          requires: [ 'Prepare Code' ]
+          name: "Compile x86_64 PHP 83 debug-zts-asan"
+          docker_image: "datadog/dd-trace-ci:php-8.3_buster"
+          so_suffix: "20230831"
+      - compile_extension_asan:
+          requires: [ 'Prepare Code' ]
+          name: "Compile aarch64 PHP 83 debug-zts-asan"
+          docker_image: "datadog/dd-trace-ci:php-8.3_buster"
+          so_suffix: "20230831"
+          resource_class: "arm.medium"
 
       - "package extension":
           name: "package extension zts-debug-asan"
@@ -2764,6 +2817,8 @@ workflows:
             - "Compile aarch64 PHP 81 debug-zts-asan"
             - "Compile x86_64 PHP 82 debug-zts-asan"
             - "Compile aarch64 PHP 82 debug-zts-asan"
+            - "Compile x86_64 PHP 83 debug-zts-asan"
+            - "Compile aarch64 PHP 83 debug-zts-asan"
 
       - "x-profiling phpt tests on Alpine":
           requires: [ 'package extension' ]
@@ -2777,6 +2832,7 @@ workflows:
                 - '8.0'
                 - '8.1'
                 - '8.2'
+                - '8.3'
 
       - randomized_tests:
           requires: [ 'package extension' ]
@@ -2888,6 +2944,7 @@ workflows:
                 - alpine:3.12
                 - alpine:3.15
                 - alpine:3.16
+                - alpine:3.17
                 # SIGNALFX: latest breaks if dd install/verify is not kept up-to-date with upstream
                 #- alpine:latest
       - verify_alpine:
@@ -2926,7 +2983,8 @@ workflows:
                 - php:7.4-fpm-alpine
                 - php:8.0-fpm-alpine
                 - php:8.1-fpm-alpine
-                - php:8.2-rc-fpm-alpine
+                - php:8.2-fpm-alpine
+                - php:8.3.0RC2-fpm-alpine
       - verify_centos:
           requires: [ "package extension" ]
           matrix:
@@ -2945,6 +3003,7 @@ workflows:
                 - PHP_MAJOR=8 PHP_MINOR=0
                 - PHP_MAJOR=8 PHP_MINOR=1
                 - PHP_MAJOR=8 PHP_MINOR=2
+                # - PHP_MAJOR=8 PHP_MINOR=3
       - verify_debian:
           requires: [ "package extension" ]
           matrix:
@@ -2966,6 +3025,7 @@ workflows:
                 - PHP_VERSION=8.0
                 - PHP_VERSION=8.1
                 - PHP_VERSION=8.2
+                # - PHP_VERSION=8.3
 
       - verify_tar_gz:
           requires: [ "package extension" ]
@@ -3015,6 +3075,10 @@ workflows:
       #     requires: [ "Build PECL" ]
       #     name: "PHP 82 PECL tests"
       #     docker_image: "datadog/dd-trace-ci:php-8.2_buster"
+      # - pecl_tests:
+      #     requires: [ "Build PECL" ]
+      #     name: "PHP 83 PECL tests"
+      #     docker_image: "datadog/dd-trace-ci:php-8.3_buster"
       - integration_tests:
           requires: [ 'Prepare Code' ]
           name: "PHP 72 web tests with apache (+ opcache)"
@@ -3094,6 +3158,22 @@ workflows:
           docker_image: "datadog/dd-trace-ci:php-8.2_buster"
       - integration_tests:
           requires: [ 'Prepare Code' ]
+          name: "PHP 83 web tests with apache (+ opcache)"
+          resource_class: medium+
+          sapi: apache2handler
+          integration_testsuite: "test_web"
+          docker_image: "datadog/dd-trace-ci:php-8.3_buster"
+          php_major_minor: "8.3"
+      - integration_tests:
+          requires: [ 'Prepare Code' ]
+          name: "PHP 83 web tests with nginx + FastCGI"
+          resource_class: medium+
+          sapi: cgi-fcgi
+          integration_testsuite: "test_web"
+          docker_image: "datadog/dd-trace-ci:php-8.3_buster"
+          php_major_minor: "8.3"
+      - integration_tests:
+          requires: [ 'Prepare Code' ]
           name: "PHP 74 custom autoloaded web tests with nginx + PHP-FPM"
           resource_class: medium+
           sapi: fpm-fcgi
@@ -3146,6 +3226,7 @@ workflows:
                 - '8.0'
                 - '8.1'
                 - '8.2'
+                - '8.3'
               switch_php_version:
                 - debug-zts-asan
               resource_class:
@@ -3177,6 +3258,7 @@ workflows:
                 - '8.0'
                 - '8.1'
                 - '8.2'
+                - '8.3'
               make_target:
                 - test_composer
                 - test_integration
@@ -3199,6 +3281,7 @@ workflows:
                 - '8.0'
                 - '8.1'
                 - '8.2'
+                - '8.3'
               make_target:
                 - test_web
 
@@ -3218,6 +3301,7 @@ workflows:
                 - '8.0'
                 - '8.1'
                 - '8.2'
+                - '8.3'
               make_target:
                 - test_distributed_tracing
 
@@ -3235,6 +3319,7 @@ workflows:
                 - '8.0'
                 - '8.1'
                 - '8.2'
+                - '8.3'
               switch_php_version:
                 - nts
               make_target:
@@ -3288,9 +3373,19 @@ workflows:
           name: "PHP 82 Xdebug tests"
           docker_image: "datadog/dd-trace-ci:php-8.2_buster"
           xdebug_version_one: "3.2.2"
+      - xdebug_tests:
+          requires: [ 'Prepare Code' ]
+          name: "PHP 83 Xdebug tests"
+          docker_image: "datadog/dd-trace-ci:php-8.3_buster"
+          xdebug_version_one: "3.3.0"
       - placeholder:
           requires: [ 'Prepare Code' ]
           name: Language tests
+      - php_language_tests:
+          requires: [ 'Language tests' ]
+          name: "PHP 83 language tests"
+          xfail_list: dockerfiles/ci/xfail_tests/8.3.list
+          docker_image: "datadog/dd-trace-ci:php-8.3_buster"
       - php_language_tests:
           requires: [ 'Language tests' ]
           name: "PHP 82 language tests"
