--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2984,7 +2984,7 @@ workflows:
                 - php:8.0-fpm-alpine
                 - php:8.1-fpm-alpine
                 - php:8.2-fpm-alpine
-                - php:8.3.0RC2-fpm-alpine
+                - php:8.3-fpm-alpine
       - verify_centos:
           requires: [ "package extension" ]
           matrix:
@@ -3003,7 +3003,7 @@ workflows:
                 - PHP_MAJOR=8 PHP_MINOR=0
                 - PHP_MAJOR=8 PHP_MINOR=1
                 - PHP_MAJOR=8 PHP_MINOR=2
-                # - PHP_MAJOR=8 PHP_MINOR=3
+                - PHP_MAJOR=8 PHP_MINOR=3
       - verify_debian:
           requires: [ "package extension" ]
           matrix:
@@ -3025,7 +3025,7 @@ workflows:
                 - PHP_VERSION=8.0
                 - PHP_VERSION=8.1
                 - PHP_VERSION=8.2
-                # - PHP_VERSION=8.3
+                - PHP_VERSION=8.3
 
       - verify_tar_gz:
           requires: [ "package extension" ]
