--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -161,28 +161,24 @@ aliases:
 
         export CIRCLE_REPOSITORY_URL="${CIRCLE_REPOSITORY_URL/git@github.com:/https://github.com/}"
 
-        if ! [ -e "$HOME/datadog/.git" ] ; then
+        if [ -e "$HOME/datadog/.git" ] ; then
+          echo 'Fetching into existing repository'
+          existing_repo='true'
+          cd "$HOME/datadog"
+          git remote set-url origin "$CIRCLE_REPOSITORY_URL" || true
+
+          echo 'Fetching from remote repository'
+          if [ -n "$CIRCLE_TAG" ]; then
+            git fetch --force --no-recurse-submodules --tags origin
+          elif [ -z "$CIRCLE_PR_NUMBER" ]; then
+            git fetch --force --no-recurse-submodules origin "+refs/heads/$CIRCLE_BRANCH:refs/remotes/origin/$CIRCLE_BRANCH"
+          fi
+        else
           echo 'Cloning git repository'
           existing_repo='false'
           mkdir -p "$HOME/datadog"
           cd "$HOME/datadog"
           git clone --no-checkout "$CIRCLE_REPOSITORY_URL" .
-        fi
-
-        echo 'Fetching into existing repository'
-        existing_repo='true'
-        cd "$HOME/datadog"
-        git remote set-url origin "$CIRCLE_REPOSITORY_URL" || true
-
-        echo 'Fetching from remote repository'
-        if [ -n "$CIRCLE_TAG" ]; then
-          git fetch --force --tags origin
-        else
-          if [[ "$CIRCLE_BRANCH" == *"pull/"* ]]; then
-            git fetch --force origin "+refs/$CIRCLE_BRANCH/head:refs/remotes/origin/$CIRCLE_BRANCH"
-          else
-            git fetch --force origin "+refs/heads/$CIRCLE_BRANCH:refs/remotes/origin/$CIRCLE_BRANCH"
-          fi
         fi
 
         if [ -n "$CIRCLE_TAG" ]; then
@@ -191,6 +187,9 @@ aliases:
           git reset --hard "$CIRCLE_SHA1"
         else
           echo 'Checking out branch'
+          if [ -n "$CIRCLE_PR_NUMBER" ]; then
+            git fetch --force origin "+refs/pull/${CIRCLE_PR_NUMBER}/head:refs/remotes/origin/$CIRCLE_BRANCH"
+          fi
           git checkout --force -B "$CIRCLE_BRANCH" "$CIRCLE_SHA1"
           git --no-pager log --no-color -n 1 --format='HEAD is now at %h %s'
         fi
@@ -2006,6 +2005,10 @@ jobs:
     working_directory: ~/datadog
     docker: [ image: 'datadog/docker-library:ddtrace_php_fpm_packaging' ]
     steps:
+      - restore_cache:
+          keys:
+            - source-v1-{{ .Branch }}-{{ .Revision }}
+      - <<: *STEP_CHECKOUT
       - <<: *STEP_ATTACH_WORKSPACE
       - run:
           name: Build SFX packages
@@ -3163,7 +3166,6 @@ workflows:
           sapi: apache2handler
           integration_testsuite: "test_web"
           docker_image: "datadog/dd-trace-ci:php-8.3_buster"
-          php_major_minor: "8.3"
       - integration_tests:
           requires: [ 'Prepare Code' ]
           name: "PHP 83 web tests with nginx + FastCGI"
@@ -3171,7 +3173,6 @@ workflows:
           sapi: cgi-fcgi
           integration_testsuite: "test_web"
           docker_image: "datadog/dd-trace-ci:php-8.3_buster"
-          php_major_minor: "8.3"
       - integration_tests:
           requires: [ 'Prepare Code' ]
           name: "PHP 74 custom autoloaded web tests with nginx + PHP-FPM"
@@ -3242,6 +3243,11 @@ workflows:
               - php_major_minor: '7.4'
                 resource_class: medium
                 make_target: test_opcache_asan
+                switch_php_version: debug-zts-asan
+                # SIGNALFX: asan causes some post hooks not to get called on ARM + 8.3
+              - php_major_minor: '8.3'
+                resource_class: arm.medium
+                make_target: test_c_asan
                 switch_php_version: debug-zts-asan
 
       - integration:
